Tue Nov  8 23:06:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.h:
        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Rename narrowXXX methods to narrow.

        * docs/getting_started.odt:

          Updates for publisher code.

Tue Nov  8 22:00:14 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          fuzz.

Tue Nov  8 21:57:37 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:
        * java/tests/dcps_java_tests.lst:
        * tools/modeling/tests/modeling_tests.lst:

          Use the "NO_MCAST" Config value to prevent tests which require
          multicast from running on platforms that don't have multicast
          routing enabled.

Tue Nov  8 21:09:24 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal:

          update svn:ignore

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:

          additional comments.

        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:

          #include changes using relative path.
          Make publisher accept number of messages as commnand line arg.

Tue Nov  8 20:05:38 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Model.mpc:

          Inherit from install project to support lib is installed.

Tue Nov  8 19:50:02 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/MessengerMinimal.mpc:

          Inherit from dds_model, rather than appending to libs directly.
