@@ -1,3 +1,13 @@
+Wed Nov  9 04:18:55 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
+
+        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:
+
+          Fix typos, reformat
+
+        * docs/getting_started.odt:
+
+          Finsish publisher code description.
+
 Tue Nov  8 23:06:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
 
         * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.h:
